      - When purge option is used, don't auto-purge not changed packages in
        the state 'config-files'. Fixes a regression introduced in
        2.0.0~alpha1.
      - When purge option is used, do removal instead of purge for packages
        removed by resolver and not by user.
      - Reorganized 'ActionsPreview' structure.
      - 'setDesiredState': use Resolver::Offer as an argument.
    - common:
      - compareVersionStrings: fixed sorting letters before other characters.
        This regression was introduced in 2.0.0~alpha1.
    - cache:
      - 'getPin': increased downgrade penalty in 5 times.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 07 Jan 2011 10:05:23 +0200

cupt2 (2.0.0~alpha3) UNRELEASED; urgency=low

  * All the non-experimental functionality from cupt 1.x is now implemented.

  * console:
    - Fixed non-working binary-to-source mapping in source package version
      expressions.
    - Disallow matching options by prefix. Fixes a regression since
      2.0.0~alpha1.
    - 'snapshot': implemented.
  * lib:
    - cache/binaryversion:
      - 'parseFromFile': 10-25% speed-up.
    - file:
      - 'getRecord': removed parameter 'accepter'.
    - system/resolver:
      - 'operator=': forbidden now.
      - Reorganized *Reason struct, transformed to struct hierarchy.
      - Apply essential package penalty only for removals.
      - Version priorities don't affect versions' scores anymore.
    - system/worker:
      - 'operator=': forbidden now.
      - 'markAsAutomaticallyInstalled': renamed to
        'setAutomaticallyInstalledFlag'.
      - 'deleteArchive': fixed possible directory traversal.
      - Implemented snapshot-related methods.
      - Rewrote scheduling dpkg actions to automatically determine packages
        which need an indirect upgrade, making the option
        'cupt::worker::allow-indirect-upgrade' unneeded.
      - Introduce dpkg action priority heuristics to reduce the time from